Mike changed some stuff

--- a/about.html
+++ b/about.html
@@ -343,12 +343,12 @@
 
 
       <!-- page header start -->
-      <section class="d-flex align-items-center md:d-block h-100vh md:h-unset">
+      <section class="layout-pt-lg layout-pb-md">
         <!-- container start -->
         <div data-anim-wrap class="container">
           <!-- row start -->
-          <div class="row align-items-center md:mt-120">
-            <div class="col-lg-5 col-md-8">
+          <div class="row align-items-center md:mt-40">
+            <div class="col-lg-5 col-md-8 order-1 md:order-2 md:mt-80">
               <div data-anim-child="slide-up" class="sectionHeading -md">
                 <h1 class="sectionHeading__title">
                   I design to live, & I live to design.
@@ -371,11 +371,9 @@
               </div>
             </div>
 
-            <div class="col-lg-6 offset-lg-1 md:mt-56">
+            <div class="col-lg-6 offset-lg-1  order-2 md:order-1">
               <div data-anim-child="img-right cover-white delay-6">
-                <div data-parallax="0.7" class="h-100vh md:h-70vh">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/about/aboutme.png"></div>
-                </div>
+                <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/backgrounds/2.jpg"></div>
               </div>
             </div>
           </div>
@@ -384,9 +382,10 @@
         <!-- container end -->
       </section>
       <!-- page header end -->
+
       
       <!-- section start -->
-      <section class="layout-pt-lg ">
+      <section class="layout-pt-lg">
         <div data-anim-wrap>
 
           <!-- container start -->
