--- a/index.html
+++ b/index.html
@@ -194,14 +194,6 @@
 
       <!-- section start -->
       <section class="masthead -type-3 -full-height js-masthead-type-3 js-shapes">
-        <!-- shapes start -->
-        <div class="masthead-shapes -group-2">
-          <div class="masthead-shapes__item -item-1">
-            <div class="masthead-shapes__shape -white -shadow-light js-shape"><img src="img/misc/MAC_3.png" height="70%" style="align-items: center;"></div> 
-          </div>
-        </div>
-        <!-- shapes end -->
-
         <!-- container start -->
         <div class="container">
           <div class="row">
@@ -213,31 +205,52 @@
                   </p>
                 </div>
 
+                <!-- shapes start -->
+                <!-- <div class="masthead-shapes -group-2">
+                  <div class="masthead-shapes__item -item-1">
+                    <div class="masthead-shapes__shape js-shape">
+                      <img src="img/misc/MAC_3.png">
+                    </div> 
+                  </div>
+                </div> -->
+                <div class="masthead-shapes -group-2">
+                  <div class="masthead-shapes__shape js-shape">
+                    <img src="img/misc/MAC_3.png">
+                  </div>
+                </div>
+                <!-- shapes end -->
+
                 <div data-split="lines" data-split-page-reveal>
                   <h1 class="masthead__title fw-600 js-title">
                     <br>
                     Suha Fatima
-                    </h1>
+                  </h1>
                 </div>
 
                 <div data-split="lines" data-split-page-reveal>
                   <p class="masthead__text mt-40 md:mt-32 sm:mt-20 js-text">
-                   I do branding, web design & motion graphics with a keen <br>
-                   interest in UI/UX. I make visual solutions that are ethical, <br>
-                   intelligent & fun while keeping the user in mind. 
-                   Based in <br>Toronto, working worldwide 📌
+                    I do branding, web design & motion graphics with a keen <br>
+                    interest in UI/UX. I make visual solutions that are ethical, <br>
+                    intelligent & fun while keeping the user in mind. 
+                    Based in <br>Toronto, working worldwide 📌
                   </p>
                 </div>
+
+                <!-- <div class="overflow-hidden">
+                  <div class="masthead__button mt-48 md:mt-40 sm:mt-32 js-button">
+                    <a href="#" class="button -md -outline-black text-black">
+                      See the works
+                    </a>
+                  </div>
+                </div> -->
               </div>
             </div>
           </div>
         </div>
         <!-- container end -->
 
-        
-
         <!-- ui-element start -->
-        <div class="ui-element -bottom sm:d-none js-ui">
+        <div class="ui-element -bottom-left sm:d-none js-ui">
           <button type="button" class="ui-element__scroll text-black js-ui-scroll-button">
             scroll down
             <i class="icon" data-feather="arrow-down"></i>
