--- a/trashtag-2.html
+++ b/trashtag-2.html
@@ -344,7 +344,7 @@
 
 
       <!-- section start -->
-      <section class="masthead -type-work-1 sm:text-center js-masthead-type-work-1 js-shapes">
+      <section class="masthead -project-page-2 -type-work-1 sm:text-center js-masthead-type-work-1 js-shapes">
         <!-- shapes start -->
         <!-- <div class="masthead-shapes -group-4">
           <div class="masthead-shapes__item -item-1">
@@ -356,24 +356,12 @@
         </div> -->
         <!-- shapes end -->
 
-        
-
         <!-- masthead__content start -->
         <div class="masthead__content">
-
-          <!-- container start -->
-          <div class="container-wide z-5 relative">
-            <div class="h-lg z-5 js-image">
-              <div class="bg-image js-lazy" data-bg="img/trashtag/graphic1.png"></div>
-            </div>
-          </div>
-          <!-- container end -->
-
-
           <div class="container-fluid">
             <div class="row justify-content-center">
               <div class="col-xl-9 col-sm-10 z-3">
-                <!-- <div data-split="lines">
+                <div data-split="lines">
                   <p class="masthead__subtitle text-lg sm:text-base mb-32 sm:mb-24 js-subtitle">
                     Branding & Social Media Content
                   </p>
@@ -383,7 +371,7 @@
                   <h1 class="masthead__title fw-700 js-title">
                     Trashtag Kuwait
                   </h1>
-                </div> -->
+                </div>
 
                 <div class="masthead__info__wrap">
                   <div class="row y-gap-32">
@@ -424,9 +412,16 @@
               </div>
             </div>
           </div>
-
         </div>
         <!-- masthead__content end -->
+
+        <!-- container start -->
+        <div class="container-wide z-5 relative">
+          <div class="h-lg z-5 js-image">
+            <div class="bg-image js-lazy" data-bg="img/trashtag/graphic1.png"></div>
+          </div>
+        </div>
+        <!-- container end -->
       </section>
       <!-- section end -->
 
