trashtag-2 header image fix

--- a/trashtag.html
+++ b/trashtag.html
@@ -345,26 +345,13 @@
 
       <!-- section start -->
       <section class="masthead -type-work-1 sm:text-center js-masthead-type-work-1 js-shapes">
-        <!-- shapes start -->
-        <!-- <div class="masthead-shapes -group-4">
-          <div class="masthead-shapes__item -item-1">
-            <div class="masthead-shapes__shape -white -shadow-light js-shape"></div>
-          </div>
-          <div class="masthead-shapes__item -item-2">
-            <div class="masthead-shapes__shape -white -shadow-light js-shape"></div>
-          </div>
-        </div> -->
-        <!-- shapes end -->
-
-        
-
         <!-- masthead__content start -->
         <div class="masthead__content">
 
           <!-- container start -->
           <div class="container-wide z-5 relative">
-            <div class="h-lg z-5 js-image">
-              <div class="bg-image js-lazy" data-bg="img/trashtag/graphic1.png"></div>
+            <div class="z-5 js-image">
+              <div class="ratio ratio-16:9 bg-image js-lazy" data-bg="img/trashtag/graphic1.png"></div>
             </div>
           </div>
           <!-- container end -->
@@ -373,18 +360,6 @@
           <div class="container-fluid">
             <div class="row justify-content-center">
               <div class="col-xl-9 col-sm-10 z-3">
-                <!-- <div data-split="lines">
-                  <p class="masthead__subtitle text-lg sm:text-base mb-32 sm:mb-24 js-subtitle">
-                    Branding & Social Media Content
-                  </p>
-                </div>
-
-                <div data-split="lines">
-                  <h1 class="masthead__title fw-700 js-title">
-                    Trashtag Kuwait
-                  </h1>
-                </div> -->
-
                 <div class="masthead__info__wrap">
                   <div class="row y-gap-32">
 
