--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/hover.css" media="all">
   <script src="https://kit.fontawesome.com/3a2b9eae0b.js" crossorigin="anonymous"></script>
-
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://suhafatima.me">
+  <meta property="og:site_name" content="Suha Fatima — UI/UX Designer">
+  <meta property="og:title" content="Suha Fatima — UI/UX Designer">
+  <meta property="og:image" content="https://suhafatima.me/img/ebike/graphic3.png">
   <!-- Favicon -->
-
-  
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
   <link rel="manifest" href="img/favicon/site.webmanifest">
@@ -32,7 +35,7 @@
   <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Suha*</title>
+  <title>Suha Fatima - UI/UX Designer</title>
 
 </head>
 
