--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <meta property="og:url" content="https://suhafatima.me">
   <meta property="og:site_name" content="Suha Fatima — UI/UX Designer">
   <meta property="og:title" content="Suha Fatima — UI/UX Designer">
-  <meta property="og:image" content="https://suhafatima.me/img/ebike/graphic3.png">
+  <meta property="og:description" content="Suha Fatima's Portfolio — Projects including UI/UX, Branding, Website Design, Motion Graphics and Illustrations">
+  <meta property="og:image" content="img/ebike/graphic3.png">
   <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
