--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <meta property="og:site_name" content="Suha Fatima — UI/UX Designer">
   <meta property="og:title" content="Suha Fatima — UI/UX Designer">
   <meta property="og:description" content="Suha Fatima's Portfolio — Projects including UI/UX, Branding, Website Design, Motion Graphics and Illustrations">
-  <meta property="og:image" content="img/ebike/graphic3.png">
+  <meta property="og:image" content="https://suhafatima.me/img/misc/linkpreview.png">
+  <meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630"> 
   <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
