--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta property="og:site_name" content="Suha Fatima — UI/UX Designer">
   <meta property="og:title" content="Suha Fatima — UI/UX Designer">
   <meta property="og:description" content="Suha Fatima's Portfolio — Projects including UI/UX, Branding, Website Design, Motion Graphics and Illustrations">
-  <meta property="og:image" content="https://suhafatima.me/img/misc/linkpreview.png">
+  <meta property="og:image" content="img/misc/linkpreview.png">
   <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630"> 
   <!-- Favicon -->
