--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
   <meta property="og:description" content="Suha Fatima's Portfolio — Projects including UI/UX, Branding, Website Design, Motion Graphics and Illustrations">
   <meta property="og:image" content="img/misc/linkpreview.png">
   <meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630"> 
+  <meta property="og:image:height" content="630"> 
+  <meta name="keywords" content="Suha Fatima, Graphic Design, Branding, Print Design, UI/UX, Illustration, Motion Design" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="img/misc/linkpreview.png" />
+  <meta name="twitter:site" content="@suhafatima_" />
+  
   <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
