--- a/artists.html
+++ b/artists.html
@@ -220,6 +220,15 @@
                   </div>
                 </div>
               </div>
+
+              <div class="col-lg-auto offset-lg-1 col-sm-6">
+                <div class="masthead__info">
+                  <div data-split="lines" class="masthead__item js-info-item">
+                    <h5 class="text-lg leading-sm fw-600">Team</h5>
+                    <p class="text-lg leading-sm mt-12 sm:mt-8">Collaboration with Ezgi Atmaca</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
