New Updates (Overdue)

--- a/ebike.html
+++ b/ebike.html
@@ -494,7 +494,7 @@
               </div>
               <div class="md:mt-20">
                 <p class="text-lg text-black mt-24 sm:mt-16">
-                  Sketches were created losely following the information architecture and were developed into low-fidelity wireframes before creating high-fidelity wireframes to test the functionality of the deisgns.
+                  Sketches were created loosely following the information architecture and were developed into low-fidelity wireframes before creating high-fidelity wireframes to test the functionality of the deisgns.
                 </p>
               </div>
             </div>
