--- a/schoolqonnect.html
+++ b/schoolqonnect.html
@@ -263,8 +263,8 @@
           <!-- row start -->
           <div class="row x-gap-40 y-gap-40">
             <div class="col-lg-6">
-              <a data-gallery="gallery1" class="glightbox" href="img/sq/SQ_Cover1.png">
-                <div class="ratio ratio-1:1 bg-image js-lazy" data-bg="img/sq/SQ_Cover1.png"></div>
+              <a data-gallery="gallery1" class="glightbox" href="img/sq/SQ_Cover1.jpg">
+                <div class="ratio ratio-1:1 bg-image js-lazy" data-bg="img/sq/SQ_Cover1.jpg"></div>
               </a>
             </div>
 
@@ -299,12 +299,14 @@
                 <!-- <h2 class="text-3xl fw-600">
                   Introduction
                 </h2> -->
-                <p class="text-lg text-black mt-24 sm:mt-16">
-                </p>
+                
                 <p class="text-lg text-black mt-24 sm:mt-16">
                   The main goal was to differentiate School Qonnect from its competitors by defining the brand's main values. The designing had to be modern, bold and unique. It should inspire a sense of trust. Keeping these points in mind, I created a brand identity that could be timeless and something the company can take pride in.
                   <br><b>Keywords:</b>
                   Modern, Futuristic, Minimal, Professional, Warm, Tech-Savvy.
+                </p>
+                <p class="text-lg text-black mt-24 sm:mt-16">
+                  I chose the color purple to be the primary color of the brand. This color, along with yellow and other pops of color create a professional look that fits with the target audience. The palette is broad enough to be played with, keeping dull tones and fun pops of color that the team can use depending on whether they are creating contet for students, teachers or parents.
                 </p>
               </div>
             </div>
