--- a/about.html
+++ b/about.html
@@ -184,13 +184,13 @@
             <div class="col-lg-5 col-md-8 order-1 md:order-2 md:mt-80">
               <div data-anim-child="slide-up" class="sectionHeading -md">
                 <h1 class="sectionHeading__title">
-                  I design to live, & I live to design.
+                  I design to live & I live to design.
                 </h1>
               </div>
 
               <div data-anim-child="slide-up delay-1">
                 <p class="text-lg text-black fw-500 mt-32">
-                  I believe creating something from nothing is wonderful. It is like tapping into the spiritual world & extracting a thing of beauty from it.
+                  I believe that creating something from nothing is wonderful. It's like tapping into the spiritual world & extracting a thing of beauty from it.
                 </p>
               </div>
 
@@ -199,8 +199,13 @@
                    I've been teaching myself graphic design since I was 11. Although my background was in Media Studies & Literature, I've always nurtured my creative side. 
                 </p>
                 <p class="text-lg leading-5xl mt-24">
-                     Having lived in Kuwait & India for most of my youth, I'm currently based in Toronto, where I've studied Interactive Media Design & graduated with a 4.0 GPA. Above all, I'm learner & a stranger to life, on a mission to add more cool adjectives to my portfolio.
+                  I've lived in Kuwait & India for most of my youth & am now based in Toronto, where I've studied Interactive Media Design here.
+                  I am currently focusing on a career in UI/UX design by building on my graphic design expertise & professional work experience. 
+                  I want to create meaningful work, enrich my research process & solve bigger problems.
                 </p>
+                <p class="text-lg leading-5xl mt-24">
+                  Above all, I'm a learner & a stranger to life, on a mission to add more cool adjectives to my portfolio.
+                 </p>
               </div>
 
               
@@ -246,16 +251,16 @@
                     • Working with a creative & passionate team.
                   </p>
                   <p class="text-lg sm:text-base mt-32 md:mt-20">
-                    • Troubleshooting problems within constraints & finding a solution.
+                    • Troubleshooting problems within constraints & finding solutions.
                   </p>
                   <p class="text-lg sm:text-base mt-32 md:mt-20">
                     • A collaborative spirit with fellow creatives & clients.
                   </p>
                   <p class="text-lg sm:text-base mt-32 md:mt-20">
-                    • Travelling & imbibing the experience into art or my work.
+                    • Travelling & imbibing my experiences into my art and work.
                   </p>
                   <p class="text-lg sm:text-base mt-32 md:mt-20">
-                    • The beginning of a project, taking half-formed ideas & making them real. 
+                    • The beginning of a project – taking half-formed ideas & making them real. 
                   </p>
                   
                 </div>
@@ -277,13 +282,13 @@
           <!-- row start -->
           <div class="row">
             <div class="col-xl-5 col-lg-8 col-md-10">
-              <div class="sectionHeading -lg">
+              <div class="sectionHeading -sm">
                 <p class="sectionHeading__subtitle">
-                  Services
+                  What I can do
                 </p>
-                <h2 class="sectionHeading__title">
-                  A Wide Range of Services
-                </h2>
+                <h1 class="sectionHeading__title">
+                  Skills & Expertise
+                </h1>
               </div>
             </div>
           </div>
@@ -310,9 +315,9 @@
                     <ul class="services">
                       <li class "services">Research & Personas</li>
                       <li>Wireframes</li>
-                      <li>UI Screens & Components</li>
                       <li>Protoypes & Testing</li>
                       <li>Information Architecture</li>
+                      <li>UI Screens & Components</li>
                     </ul>
                   </p>
 
@@ -336,7 +341,7 @@
 
                   <p class="serviceCard__text mt-20 md:mt-12">
                     <ul>
-                      <li>Rebranding & Logo Design</li>
+                      <li>Branding & Logo Design</li>
                       <li>Illustrations (2D/3D)</li>
                       <li>Package Design</li>
                       <li>Business Stationery</li>
@@ -364,11 +369,11 @@
 
                   <p class="serviceCard__text mt-20 md:mt-12">
                     <ul>
-                      <li>GIFs & Quirky Animations</li>
-                      <li>Explainer/Introductory Videos</li>
                       <li>Storyboarding</li>
                       <li>Script-Writing</li>
                       <li>Audio Editing</li>
+                      <li>GIFs & Quirky Animations</li>
+                      <li>Explainer/Introductory Videos</li>
                     </ul>
                   </p>
 
@@ -393,9 +398,9 @@
                   <p class="serviceCard__text mt-20 md:mt-12">
                     <ul>
                       <li>Wireframes & IA</li>
-                      <li>Custom Website With Pages</li>
+                      <li>Custom Website Design</li>
                       <li>HTML/CMS Template</li>
-                      <li>Design Consultation</li>
+                      <li>Javascript/React/Bootstrap</li>
                       <li>SEO-based Content Writing</li>
                     </ul>
                   </p>
