--- a/about.html
+++ b/about.html
@@ -3,6 +3,14 @@
 
 <head>
 
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MQNJ4PD');</script>
+  <!-- End Google Tag Manager -->
+
   <!-- Required meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,11 +42,15 @@
   <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Suha* | About</title>
+  <title>Suha | About</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
 
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQNJ4PD"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <!-- preloader start -->
   <div class="preloader js-preloader">
@@ -136,6 +148,11 @@
                         </a>
                       </li>
 
+                      <li>
+                        <a data-barba href="img/misc/suha_resume.pdf" download>
+                          Resume
+                        </a>
+                      </li>
                       
                     </ul>
                   </div>
@@ -199,9 +216,9 @@
                    I've been teaching myself graphic design since I was 11. Although my background was in Media Studies & Literature, I've always nurtured my creative side. 
                 </p>
                 <p class="text-lg leading-5xl mt-24">
-                  I've lived in Kuwait & India for most of my youth & am now based in Toronto, where I've studied Interactive Media Design here.
+                  I've lived in Kuwait & India for most of my youth & am now based in Toronto, where I've studied Interactive Media Design.
+                  Through my studies, I was exposed to various disciplines such as 3D Design, Motion Graphics, Web Development, VFX and so on.
                   I am currently focusing on a career in UI/UX design by building on my graphic design expertise & professional work experience. 
-                  I want to create meaningful work, enrich my research process & solve bigger problems.
                 </p>
                 <p class="text-lg leading-5xl mt-24">
                   Above all, I'm a learner & a stranger to life, on a mission to add more cool adjectives to my portfolio.
@@ -475,8 +492,8 @@
         <div class="container">
           <div class="row justify-content-center">
             <a href="img/misc/suha_resume.pdf" class="button hvr-grow-rotate -md -outline-black text-black mt-24 js-lazy" download>
-            Download Resume
-          </a>
+              Download Resume
+            </a>
           </div>          
         </div>
       </section>
