--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 
 <head>
 
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MQNJ4PD');</script>
+  <!-- End Google Tag Manager -->
+
   <!-- Required meta tags -->
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -48,6 +57,11 @@
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQNJ4PD"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
 
   <!-- preloader start -->
@@ -141,8 +155,14 @@
                       </li>
 
                       <li>
-                          <a data-barba href="#work">
+                        <a data-barba href="#work">
                           Work
+                        </a>
+                      </li>
+
+                      <li>
+                        <a data-barba href="img/misc/suha_resume.pdf" download>
+                          Resume
                         </a>
                       </li>
                             
@@ -214,9 +234,9 @@
 
                 <div data-split="lines" data-split-page-reveal>
                   <p class="masthead__text mt-40 md:mt-32 sm:mt-20 js-text">
-                    I am a multi-disciplinary designer focused on UI/UX Design.<br>
-                     I make create solutions that are ethical, intelligent & fun <br>
-                    Based in Toronto, working worldwide 📌
+                    I am a multidisciplinary designer focused on UI/UX Design.<br>
+                     I create solutions that are ethical, intelligent & fun. <br>
+                    Based in Toronto, working worldwide. 📌
                   </p>                  
                 </div>
 
@@ -230,13 +250,6 @@
                 
                 <div></div>
 
-                <!-- <div class="overflow-hidden">
-                  <div class="masthead__button mt-48 md:mt-40 sm:mt-32 js-button">
-                    <a href="#" class="button -md -outline-black text-black">
-                      See the works
-                    </a>
-                  </div>
-                </div> -->
               </div>
             </div>
           </div>
@@ -288,7 +301,7 @@
               <a data-cursor-icon="arrow-right" data-anim="slide-up delay-2" class="portfolioCard -type-1 -hover" data-barba href="ebike.html">
                 <div class="portfolioCard__img">
                   <div class="portfolioCard__img__inner">
-                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/ebike/graphic3.png"></div>
+                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/ebike/graphic3.jpg"></div>
                   </div>
                 </div>
 
