--- a/schoolqonnect.html
+++ b/schoolqonnect.html
@@ -3,6 +3,14 @@
 
 <head>
 
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MQNJ4PD');</script>
+  <!-- End Google Tag Manager -->
+
   <!-- Required meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,11 +43,15 @@
   <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Suha* | School Qonnect</title>
+  <title>Suha | School Qonnect</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
 
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQNJ4PD"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <!-- preloader start -->
   <div class="preloader js-preloader">
@@ -137,7 +149,11 @@
                         </a>
                       </li>
 
-                      
+                      <li>
+                        <a data-barba href="img/misc/suha_resume.pdf" download>
+                          Resume
+                        </a>
+                      </li>                      
 
                     </ul>
                   </div>
