--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Suha Fatima - UI/UX Designer</title>
+  <title>Suha Fatima Portfolio</title>
 
 </head>
 
