--- a/ebike.html
+++ b/ebike.html
@@ -146,7 +146,7 @@
                       </li>
 
                       <li>
-                        <a data-barba href="img/misc/suha_resume.pdf" download>
+                        <a data-barba href="img/misc/suha_resume.pdf" target="_blank">
                           Resume
                         </a>
                       </li>                     
@@ -166,6 +166,7 @@
                       <div class="nav__info__content text-lg text-white mt-16">
                         <a href="https://www.behance.net/suhafatima">Behance</a>                        
                         <a href="https://www.instagram.com/neongraphix">Instagram</a>
+                        <a href="https://www.linkedin.com/in/suhafatima/" target="_blank">LinkedIn</a>
                       </div>
                     </div>
 
