--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
                       </li>
 
                       <li>
-                        <a data-barba href="img/misc/suha_resume.pdf" download>
+                        <a data-barba href="img/misc/suha_resume.pdf" target="_blank">
                           Resume
                         </a>
                       </li>
@@ -167,8 +167,9 @@
                       </h5>
 
                       <div class="nav__info__content text-lg text-white mt-16">
-                        <a href="https://www.behance.net/suhafatima">Behance</a>                        
-                        <a href="https://www.instagram.com/neongraphix">Instagram</a>
+                        <a href="https://www.behance.net/suhafatima" target="_blank">Behance</a>                        
+                        <a href="https://www.instagram.com/neongraphix" target="_blank">Instagram</a>
+                        <a href="https://www.linkedin.com/in/suhafatima/" target="_blank">LinkedIn</a>
                       </div>
                     </div>
 
@@ -277,7 +278,7 @@
                     • Travelling & imbibing my experiences into my art and work.
                   </p>
                   <p class="text-lg sm:text-base mt-32 md:mt-20">
-                    • The beginning of a project – taking half-formed ideas & making them real. 
+                    • The beginning of a project – taking undeveloped ideas & making them real. 
                   </p>
                   
                 </div>
