--- a/artists.html
+++ b/artists.html
@@ -151,7 +151,7 @@
                       </li>           
                       
                       <li>
-                        <a data-barba href="img/misc/suha_resume.pdf" download>
+                        <a data-barba href="img/misc/suha_resume.pdf" target="_blank">
                           Resume
                         </a>
                       </li>
@@ -169,8 +169,9 @@
                       </h5>
 
                       <div class="nav__info__content text-lg text-white mt-16">
-                        <a href="https://www.behance.net/suhafatima">Behance</a>
-                        <a href="https://www.instagram.com/neongraphix">Instagram</a>
+                        <a href="https://www.behance.net/suhafatima" target="_blank">Behance</a>
+                        <a href="https://www.instagram.com/neongraphix" target="_blank">Instagram</a>
+                        <a href="https://www.linkedin.com/in/suhafatima/" target="_blank">LinkedIn</a>                        
                       </div>
                     </div>
 
@@ -283,12 +284,12 @@
                   eccentric and memorable features while ensuring that there is a
                   sense of commonality amongst the set. Here is a brief summary
                   of our chosen painter icons:<br>
-                  <br>VINCENT VAN GOGH (1853 - 1890)
-                  <br>PABLO PICASSO (1881 - 1973)
-                  <br>RENE MAGRITTE (1898 - 1867)
-                  <br>SALVADOR DALI (1904 - 1989)
-                  <br>FRIDA KAHLO (1907 - 1954) 
-                  <br>YAYOI KASUMA (1929)
+                  <br>Vincent Van Gogh (1853 - 1890)
+                  <br>Pablo Picasso (1881 - 1973)
+                  <br>Rene Magritte (1898 - 1867)
+                  <br>Salvador Dali (1904 - 1989)
+                  <br>Frida Kahlo (1907 - 1954) 
+                  <br>Yayoi Kasuma (1929)
                 </p>
                 <p class="text-lg text-black mt-24 sm:mt-16">
                   All icons were created using the Golden Ratio.
