--- a/schoolqonnect.html
+++ b/schoolqonnect.html
@@ -150,7 +150,7 @@
                       </li>
 
                       <li>
-                        <a data-barba href="img/misc/suha_resume.pdf" download>
+                        <a data-barba href="img/misc/suha_resume.pdf" target="_blank">
                           Resume
                         </a>
                       </li>                      
@@ -168,8 +168,9 @@
                       </h5>
 
                       <div class="nav__info__content text-lg text-white mt-16">
-                        <a href="https://www.behance.net/suhafatima">Behance</a>
-                        <a href="https://www.instagram.com/neongraphix">Instagram</a>
+                        <a href="https://www.behance.net/suhafatima" target="_blank">Behance</a>
+                        <a href="https://www.instagram.com/neongraphix" target="_blank">Instagram</a>
+                        <a href="https://www.linkedin.com/in/suhafatima/" target="_blank">LinkedIn</a>
                       </div>
                     </div>
 
@@ -322,7 +323,7 @@
                   Modern, Futuristic, Minimal, Professional, Warm, Tech-Savvy.
                 </p>
                 <p class="text-lg text-black mt-24 sm:mt-16">
-                  I chose the color purple to be the primary color of the brand. This color, along with yellow and other pops of color create a professional look that fits with the target audience. The palette is broad enough to be played with, keeping dull tones and fun pops of color that the team can use depending on whether they are creating contet for students, teachers or parents.
+                  I chose the color purple to be the primary color of the brand. This color, along with yellow and other pops of color create a professional look that fits with the target audience. The palette is broad enough to be played with, keeping dull tones and fun pops of color that the team can use depending on whether they are creating content for students, teachers or parents.
                 </p>
               </div>
             </div>
