--- a/undpkuwait.html
+++ b/undpkuwait.html
@@ -150,7 +150,7 @@
                       </li>
 
                       <li>
-                        <a data-barba href="img/misc/suha_resume.pdf" download>
+                        <a data-barba href="img/misc/suha_resume.pdf" target="_blank">
                           Resume
                         </a>
                       </li>
@@ -169,8 +169,10 @@
                       </h5>
 
                       <div class="nav__info__content text-lg text-white mt-16">
-                        <a href="https://www.behance.net/suhafatima">Behance</a>
-                        <a href="https://www.instagram.com/neongraphix">Instagram</a>
+                        <a href="https://www.behance.net/suhafatima" target="_blank">Behance</a>
+                        <a href="https://www.instagram.com/neongraphix" target="_blank">Instagram</a>
+                        <a href="https://www.linkedin.com/in/suhafatima/" target="_blank">LinkedIn</a>
+
                       </div>
                     </div>
 
@@ -313,7 +315,7 @@
               </div>
 
               <p class="text-3xl md:text-2xl leading-lg text-black mt-24">
-                    After conducting an <b>in-depth research</b> about the goals of UNDP in Kwuait and all over the world, I identified important <b>branding patterns</b> and utilised it to create a clean, professional and fun <b>social media visual layout. </b>
+                    After conducting an <b>in-depth research</b> about the goals of UNDP in Kuwait and all over the world, I identified important <b>branding patterns</b> and utilised it to create a clean, professional and fun <b>social media visual layout. </b>
               </p>
               
             </div>
