--- a/ebike.html
+++ b/ebike.html
@@ -164,8 +164,8 @@
                       </h5>
 
                       <div class="nav__info__content text-lg text-white mt-16">
-                        <a href="https://www.behance.net/suhafatima">Behance</a>                        
-                        <a href="https://www.instagram.com/neongraphix">Instagram</a>
+                        <a href="https://www.behance.net/suhafatima" target="_blank">Behance</a>                        
+                        <a href="https://www.instagram.com/neongraphix" target="_blank">Instagram</a>
                         <a href="https://www.linkedin.com/in/suhafatima/" target="_blank">LinkedIn</a>
                       </div>
                     </div>
