--- a/ebike.html
+++ b/ebike.html
@@ -558,7 +558,7 @@
             <div class="col-xl-7 col-lg-8">
               <div class="md:mt-20">
                 <h2 class="text-3xl fw-600">
-                  Wireframe & Protoypes
+                  Wireframe & Prototypes
                 </h2>
                 <p class="leading-5xl mt-24 sm:mt-16">
                 </p>
