--- a/schoolqonnect.html
+++ b/schoolqonnect.html
@@ -465,7 +465,7 @@
           <div class="col-lg-6">
             <a data-barba href="undpkuwait.html" class="projects-nav__item -prev bg-dark-1">
               <div class="projects-nav__img">
-                <div class="bg-image js-lazy" data-bg="img/undp/cover.png"></div>
+                <div class="bg-image js-lazy" data-bg="img/undp/cover.jpg"></div>
               </div>
 
               <div class="projects-nav__content">
