--- a/undpkuwait.html
+++ b/undpkuwait.html
@@ -204,7 +204,7 @@
           <!-- container start -->
           <div class="container-wide z-5 relative">
             <div class="z-5 js-image">
-              <div class="ratio ratio-16:9 bg-image js-lazy" data-bg="img/undp/cover.png"></div>
+              <div class="ratio ratio-16:9 bg-image js-lazy" data-bg="img/undp/cover.jpg"></div>
             </div>
           </div>
           <!-- container end -->
@@ -437,12 +437,12 @@
           <!-- row start -->
           <div class="row">
             <div class="col-12">             
-              <img src="img/undp/graphic5.png" width="100%">
+              <img src="img/undp/graphic5.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12">             
-              <img src="img/undp/graphic4.2.png" width="100%">
+              <img src="img/undp/graphic4.2.jpg" width="100%">
             </div>
           </div>
           <!-- row end -->
@@ -482,7 +482,7 @@
           <div class="col-lg-6">
             <a data-barba href="schoolqonnect.html" class="projects-nav__item -next bg-dark-1">
               <div class="projects-nav__img">
-                <div class="bg-image js-lazy" data-bg="img/sq/SQ_Cover1.png"></div>
+                <div class="bg-image js-lazy" data-bg="img/sq/SQ_Cover1.jpg"></div>
               </div>
 
               <div class="projects-nav__content">
