--- a/artists.html
+++ b/artists.html
@@ -203,7 +203,7 @@
           <!-- container start -->
           <div class="container-wide z-5 relative">
             <div class="z-5 js-image">
-              <img src="img/artists/graphic1.png" width="100%">
+              <img src="img/artists/graphic1.jpg" width="100%">
             </div>
           </div>
           <!-- container end -->
@@ -311,32 +311,32 @@
           <!-- row start -->
           <div class="row">
             <div class="col-12">
-              <img src="img/artists/graphic2.png" width="100%">
+              <img src="img/artists/graphic2.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48 mb-48">
-              <img src="img/artists/graphic3.png" width="100%">
+              <img src="img/artists/graphic3.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48 mb-48">
-              <img src="img/artists/graphic4.png" width="100%">
+              <img src="img/artists/graphic4.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48 mb-48">
-              <img src="img/artists/graphic5.png" width="100%">
+              <img src="img/artists/graphic5.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48 mb-48">
-              <img src="img/artists/graphic6.png" width="100%">
+              <img src="img/artists/graphic6.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48 mb-48">
-              <img src="img/artists/graphic7.png" width="100%">
+              <img src="img/artists/graphic7.jpg" width="100%">
             </div>
           </div>
           <!-- row end -->
@@ -376,7 +376,7 @@
           <div class="col-lg-6">
             <a data-barba href="awaken.html" class="projects-nav__item -next bg-dark-1">
               <div class="projects-nav__img">
-                <div class="bg-image js-lazy" data-bg="img/awaken/img7.png"></div>
+                <div class="bg-image js-lazy" data-bg="img/awaken/img7.jpg"></div>
               </div>
 
               <div class="projects-nav__content">
