--- a/schoolqonnect.html
+++ b/schoolqonnect.html
@@ -202,7 +202,7 @@
           <!-- container start -->
           <div class="container-wide z-5 relative">
             <div class="z-5 js-image">
-              <img src="img/sq/graphic1.png" width="100%">
+              <img src="img/sq/graphic1.jpg" width="100%">
             </div>
           </div>
           <!-- container end -->
@@ -488,7 +488,7 @@
           <div class="col-lg-6">
             <a data-barba href="artists.html" class="projects-nav__item -next bg-dark-1">
               <div class="projects-nav__img">
-                <div class="bg-image js-lazy" data-bg="img/artists/graphic1.png"></div>
+                <div class="bg-image js-lazy" data-bg="img/artists/graphic1.jpg"></div>
               </div>
 
               <div class="projects-nav__content">
