--- a/undpkuwait.html
+++ b/undpkuwait.html
@@ -285,14 +285,14 @@
               <img src="img/undp/graphic3.1.png" width="60%">
             </div>
             <div class="col-lg-6">
-              <a data-gallery="gallery1" class="glightbox" href="img/undp/graphic1.png">
-                <div class="ratio ratio-1:1 bg-image js-lazy" data-bg="img/undp/graphic1.png"></div>
+              <a data-gallery="gallery1" class="glightbox" href="img/undp/graphic1.jpg">
+                <div class="ratio ratio-1:1 bg-image js-lazy" data-bg="img/undp/graphic1.jpg"></div>
               </a>
             </div>
 
             <div class="col-lg-6">
-              <a data-gallery="gallery1" class="glightbox" href="img/undp/graphic2.png">
-                <div class="ratio ratio-1:1 bg-image js-lazy" data-bg="img/undp/graphic2.png"></div>
+              <a data-gallery="gallery1" class="glightbox" href="img/undp/graphic2.jpg">
+                <div class="ratio ratio-1:1 bg-image js-lazy" data-bg="img/undp/graphic2.jpg"></div>
               </a>
             </div>
 
