--- a/awaken.html
+++ b/awaken.html
@@ -202,7 +202,7 @@
           <!-- container start -->
           <div class="container-wide z-5 relative">
             <div class="z-5 js-image">
-              <img src="img/awaken/graphic1.1.png" width="100%">
+              <img src="img/awaken/graphic1.1.jpg" width="100%">
             </div>
           </div>
           <!-- container end -->
@@ -298,7 +298,7 @@
           </div>
           <div class="row">
             <div class="col-12 mt-48 mb-48">
-               <img src="img/awaken/graphic4.png" width="100%">
+               <img src="img/awaken/graphic4.jpg" width="100%">
             </div>
           </div>
           <!-- row end -->
@@ -351,40 +351,40 @@
           </div>
           <div class="row">
             <div class="col-12 mt-48">
-               <img src="img/awaken/graphic2.png" width="100%">
+               <img src="img/awaken/graphic2.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48">
-               <img src="img/awaken/img5.png" width="100%">
+               <img src="img/awaken/img5.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48">
-              <a data-gallery="gallery1" class="glightbox" href="img/awaken/img4.png">
-               <img src="img/awaken/img4.png" width="100%">
+              <a data-gallery="gallery1" class="glightbox" href="img/awaken/img4.jpg">
+               <img src="img/awaken/img4.jpg" width="100%">
               </a>
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48">
-               <img src="img/awaken/img1.png" width="100%">
+               <img src="img/awaken/img1.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48">
-               <img src="img/awaken/img7.png" width="100%">
+               <img src="img/awaken/img7.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48">
-               <img src="img/awaken/graphic3.png" width="100%">
+               <img src="img/awaken/graphic3.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12 mt-48">
-              <a data-gallery="gallery1" class="glightbox" href="img/awaken/img2.png">
-               <img src="img/awaken/img2.png" width="100%">
+              <a data-gallery="gallery1" class="glightbox" href="img/awaken/img2.jpg">
+               <img src="img/awaken/img2.jpg" width="100%">
               </a>
             </div>
           </div>
@@ -401,14 +401,14 @@
           <!-- row start -->
           <div class="row x-gap-40 y-gap-40">
             <div class="col-lg-6">
-              <a data-gallery="gallery1" class="glightbox" href="img/awaken/img6.png">
-                <div class="ratio ratio-1:1 bg-image js-lazy" data-bg="img/awaken/img6.png"></div>
+              <a data-gallery="gallery1" class="glightbox" href="img/awaken/img6.jpg">
+                <div class="ratio ratio-1:1 bg-image js-lazy" data-bg="img/awaken/img6.jpg"></div>
               </a>
             </div>
 
             <div class="col-lg-6">
-              <a data-gallery="gallery1" class="glightbox" href="img/awaken/img8.png">
-                <div class="ratio ratio-1:1 bg-image js-lazy" data-bg="img/awaken/img8.png"></div>
+              <a data-gallery="gallery1" class="glightbox" href="img/awaken/img8.jpg">
+                <div class="ratio ratio-1:1 bg-image js-lazy" data-bg="img/awaken/img8.jpg"></div>
               </a>
             </div>
           </div>
@@ -426,7 +426,7 @@
           <div class="col-lg-6">
             <a data-barba href="artists.html" class="projects-nav__item -prev bg-dark-1">
               <div class="projects-nav__img">
-                <div class="bg-image js-lazy" data-bg="img/artists/graphic1.png"></div>
+                <div class="bg-image js-lazy" data-bg="img/artists/graphic1.jpg"></div>
               </div>
 
               <div class="projects-nav__content">
@@ -449,7 +449,7 @@
           <div class="col-lg-6">
             <a data-barba href="ebike.html" class="projects-nav__item -next bg-dark-1">
               <div class="projects-nav__img">
-                <div class="bg-image js-lazy" data-bg="img/ebike/graphic1.png"></div>
+                <div class="bg-image js-lazy" data-bg="img/ebike/graphic1.jpg"></div>
               </div>
 
               <div class="projects-nav__content">
