--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
               <a data-cursor-icon="arrow-right" data-anim="slide-up delay-2" class="portfolioCard -type-1 -hover" data-barba href="artists.html">
                 <div class="portfolioCard__img">
                   <div class="portfolioCard__img__inner">
-                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/artists/graphic1.png"></div>
+                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/artists/graphic1.jpg"></div>
                   </div>
                 </div>
 
