--- a/trashtag.html
+++ b/trashtag.html
@@ -416,12 +416,12 @@
           </div>
           <div class="row">
             <div class="col-12 mt-48 mb-48">
-               <img src="img/trashtag/graphic10.png" width="100%">
+               <img src="img/trashtag/graphic10.jpg" width="100%">
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <img src="img/trashtag/graphic8.png" width="100%">
+              <img src="img/trashtag/graphic8.jpg" width="100%">
             </div>
           </div>
           <!-- row end -->
