--- a/about.html
+++ b/about.html
@@ -11,6 +11,17 @@
     })(window,document,'script','dataLayer','GTM-MQNJ4PD');</script>
   <!-- End Google Tag Manager -->
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-195993932-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-195993932-1');
+</script>
+
+
   <!-- Required meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
