--- a/about.html
+++ b/about.html
@@ -379,7 +379,7 @@
                     <ul class="services">
                       <li class "services">Research & Personas</li>
                       <li>Wireframes</li>
-                      <li>Protoypes & Testing</li>
+                      <li>Prototypes & Testing</li>
                       <li>Information Architecture</li>
                       <li>UI Screens & Components</li>
                     </ul>
