--- a/awaken.html
+++ b/awaken.html
@@ -465,7 +465,7 @@
 
               <div class="projects-nav__content">
                 <h3 class="text-4xl fw-400 tracking-none text-white">
-                  eBike Rental App
+                  eCycle Rental App
                 </h3>
 
                 <div class="projects-nav__icon">
