--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@
             <div class="col-lg-6 col-md-10">
               <div data-anim-child="slide-up" class="sectionHeading -sm">
                 <h1 class="sectionHeading__title">
-                  I also like:
+                  Some things I like:
                 </h1>
               </div>
             </div>
@@ -275,13 +275,13 @@
                   • Working with a creative & passionate team.
                 </p>
                 <p class="text-lg sm:text-base mt-32 md:mt-20">
+                  • A collaborative spirit with fellow creatives & clients.                  
+                </p>
+                <p class="text-lg sm:text-base mt-32 md:mt-20">
+                  • Travelling & imbibing my experiences into my art & work.
+                </p>
+                <p class="text-lg sm:text-base mt-32 md:mt-20">
                   • Troubleshooting problems within constraints & finding solutions.
-                </p>
-                <p class="text-lg sm:text-base mt-32 md:mt-20">
-                  • A collaborative spirit with fellow creatives & clients.
-                </p>
-                <p class="text-lg sm:text-base mt-32 md:mt-20">
-                  • Travelling & imbibing my experiences into my art and work.
                 </p>
                 <p class="text-lg sm:text-base mt-32 md:mt-20">
                   • The beginning of a project – taking undeveloped ideas & making them real. 
@@ -308,7 +308,7 @@
             <div class="col-lg-6 col-md-10">
               <div data-anim-child="slide-up" class="sectionHeading -sm">
                 <h1 class="sectionHeading__title">
-                  Some things I like:
+                  I also like:
                 </h1>
               </div>
             </div>
@@ -377,7 +377,7 @@
 
                   <p class="serviceCard__text mt-20 md:mt-12">
                     <ul class="services">
-                      <li class "services">Research & Personas</li>
+                      <li class "services">Research Methods</li>
                       <li>Wireframes</li>
                       <li>Prototypes & Testing</li>
                       <li>Information Architecture</li>
@@ -434,7 +434,7 @@
                   <p class="serviceCard__text mt-20 md:mt-12">
                     <ul>
                       <li>Storyboarding</li>
-                      <li>Script-Writing</li>
+                      <li>Scriptwriting</li>
                       <li>Audio Editing</li>
                       <li>GIFs & Quirky Animations</li>
                       <li>Explainer/Introductory Videos</li>
