--- a/ebike.html
+++ b/ebike.html
@@ -247,7 +247,7 @@
                       <div class="masthead__info">
                         <div data-split="lines" class="masthead__item js-info-item">
                           <h5 class="text-lg leading-sm fw-600">Completed</h5>
-                          <p class="text-lg leading-sm mt-12 sm:mt-8">Dec 2020</p>
+                          <p class="text-lg leading-sm mt-12 sm:mt-8">December 2020</p>
                         </div>
                       </div>
                     </div>
@@ -264,8 +264,8 @@
                     <div class="col-lg-auto offset-lg-1 col-sm-6">
                       <div class="masthead__info">
                         <div data-split="lines" class="masthead__item js-info-item">
-                          <h5 class="text-lg leading-sm fw-600">Type of Porject</h5>
-                          <p class="text-lg leading-sm mt-12 sm:mt-8">Solo Project</p>
+                          <h5 class="text-lg leading-sm fw-600">Type of Project</h5>
+                          <p class="text-lg leading-sm mt-12 sm:mt-8">Solo Concept Project</p>
                         </div>
                       </div>
                     </div>
@@ -294,21 +294,16 @@
         <!-- container start -->
         <div class="container">
           <!-- row start -->
-          <div class="row justify-content-between">
+          <div class="row ">
 
             <div class="col-auto">
               <div class="d-flex text-xs tracking-md pt-4">
                 <p class="text-accent fw-600 mr-16">01.</p>
-                <p class="uppercase fw-500">Case Study</p>
+                <p class="uppercase fw-500">The Problem</p>
               </div>
-            </div>
 
-
-            <div class="col-xl-7 col-lg-8">
               <div class="md:mt-20">
-                <h2 class="text-3xl fw-600">
-                  The Problem
-                </h2>
+                
                 <p class="text-lg text-black mt-24 sm:mt-16">
                   Existing e-bike docking stations are scattered all over the city and therefore tough to locate, pay for, and
                   track progress of the ride. There is no ease of renting one. This makes it discouraging to users who
@@ -343,7 +338,7 @@
                   number of <b>e-bikes available</b>, <b>rent</b> and <b>pay</b> for their e-bike. They also get other
                   necessary information about <b>how to use the app, safety and benefits.</b>
                 </p>
-                <p class="leading-5xl mt-24 sm:mt-16">
+                <p class="text-lg text-black mt-24 sm:mt-16">
                   eCycle Rental App therefore helps the user save time, confusion, allows them to plan their trip in advance and pay. It makes the process of dealing with kiosks easier.
                 </p>
               </div>
